@@ -3,8 +3,8 @@
 
 <Title>ELKS FAQ: Francais</Title>
 
-<Meta Name="description" Description="A port of Linux for 16-bit Intel architectures">
-<Meta Name="keywords" Keywords="Linux,linux-86,linux-8086,16-bit,UNIX,ELKS">
+<Meta Name="description" Description="French FAQ for ELKS, a port of Linux for 16-bit Intel architectures">
+<Meta Name="keywords" Keywords="Linux,linux-86,linux-8086,16-bit,UNIX,ELKS,FAQ">
 
 </Head>
 <Body BGColor=White Text=Black Link=Blue VLink=Magenta ALink=Red>
@@ -17,7 +17,7 @@ Alt="ELKS Logo" Height=77 Width=224></TD>
 <TD Width=70% Align=Center VAlign=Center><Font Size=+2>ELKS FAQ -
 Francais</Font></TD>
 <TD Width=10% Align=Right VAlign=Top><Img Src="../Images/ELKSlogo.gif"
-Alt="Baby Linux Logo" Height=76 Width=64></TD>
+Alt="Baby Linux Logo" Height=77 Width=65></TD>
 </TR>
 
 </Table>
