@@ -17,7 +17,7 @@ Alt="ELKS Logo" Height=77 Width=224></TD>
 <TD Width=70% Align=Center VAlign=Center><Font Size=+3>Introduction to
 ELKS</Font></TD>
 <TD Width=10% Align=Right VAlign=Top><Img Src="Images/ELKSlogo.gif"
-Alt="Baby Linux Logo" Height=76 Width=64></TD>
+Alt="Baby Linux Logo" Height=77 Width=65></TD>
 </TR>
 
 </Table>
@@ -38,22 +38,21 @@ Home |
 <P Align=Justify>The goal of the ELKS project is to create a Linux kernel
 for:</P>
 
-<UL>
+<P Align=Justify><UL>
 
-<LI><P Align=Justify>8086 and 80286 class <A
-HRef="http://www.ibm.com">IBM</A> Personal Computer compatible
-systems,</P>
+<LI>8086 and 80286 class <A HRef="http://www.ibm.com">IBM</A> Personal
+Computer compatible systems,
 
-<LI><P Align=Justify>Palmtop Computers, such as the <A
-HRef="http://www.psion.com">Psion</A> SiBO (Sixteen Bit Organiser),</P>
+<LI>Palmtop Computers, such as the <A
+HRef="http://www.psion.com">Psion</A> SiBO (Sixteen Bit Organiser),
 
-<LI><P Align=Justify>Single board microcomputers,</P>
+<LI>Single board microcomputers,
 
-<LI><P Align=Justify>Embedded controller systems, and</P>
+<LI>Embedded controller systems, <I>and</I>
 
-<LI><P Align=Justify>Other old computers.</P>
+<LI>Other old computers.
 
-</UL>
+</UL></P>
 
 <P Align=Justify>The current status of the ELKS project on the various
 supported architectures is:</P>
@@ -67,6 +66,9 @@ of RAM.</P>
 
 <LI><P Align=Justify>ELKS currently runs on the Psion SiBO (Sixteen Bit
 Organiser) palmtop computer.</P>
+
+<LI><P Align=Justify>There is no known version of ELKS for any other
+architecture.</P>
 
 </OL>
 
