@@ -10,9 +10,19 @@ Contributor             Current Email address           CHANGELOG entries found
 ~~~~~~~~~~~~~~~~~~~~~~  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~  ~~~~~~~~~~~~~~~~~~~~~~~
 Alistair Riddoch        <AlRiddoch@zepler.org>           1 Jan 1995-20 Oct 1999
 Harry Kalogirou         <HarKal@rainbow.cs.unipi.gr>     7 Nov 2001
-Riley Williams          <rhw@MemAlpha.cx>                8 Nov 2001-10 Nov 2001
+Michael McConnell	<Soruk@Eridani.co.uk>		11 Nov 2001
+Riley Williams          <rhw@MemAlpha.cx>                8 Nov 2001-12 Nov 2001
 
 -------------------------------------------------------------------------------
+
+Mon Nov 12 00:00:00 GMT 2001	Riley Williams <rhw@MemAlpha.cx>
+
+	* Added "description" and "keywords" fields to all HTML headers.
+	* Reformatted home page slightly.
+
+Sun Nov 11 21:33:54 GMT 2001	Michael McConnell <soruk@eridani.co.uk>
+
+	* Updated "Baby Linux" logo with transparent version.
 
 Sun Nov 11 11:06:53 GMT 2001	Riley Williams <rhw@MemAlpha.cx>
 
